[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Enrique Antonio Cores Rodríguez <encorod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.12.0"
pandas = "^2.1.4"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
